# rust_projects

adder/src/: lib.rs
adder/tests/: integration_test.rs
collections/src/: main.rs
eleven_traits/: Cargo.toml
eleven_traits/src/: lib.rs1  main.rs
enum_type/src/: main.rs
geussing_game/: Cargo.toml
geussing_game/src/: main.rs
hashmaptest/: Cargo.toml
hashmaptest/src/: main.rs
helloworld/: hello
helloworldproj/: Cargo.toml
nine_error_handling/: Cargo.toml
nine_error_handling/src/: main.rs
ownershiip/: Cargo.toml
ownershiip/src/: main.rs
packages_crate/: Cargo.toml
packages_crate/src/: front_of_house.rs  lib.rs  main.rs
slices/src/: main.rs
struct_verify/: Cargo.toml
struct_verify/src/: main.rs
ten_gentype_traits/: Cargo.toml
ten_gentype_traits/src/: main.rs
thirteen_functional/: Cargo.toml
thirteen_functional/src/: lib.rs  main.rs
twelve_minigrep/: Cargo.toml
twelve_minigrep/src/: lib.rs  main.rs
twelve_minigrep/tests/: integration_tests.rs
var_and_mutability/src/: main.rs
